opam-version: "2.0"
name: "project"
version: "0.1"
synopsis: "Waveform collapse estm"
description: "Even simpler tile model implementation"
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "ocamlfind" "dune" "core" "ppx_jane"]
build: [
  ["dune" "build" "-p" name]
]
